src/components/table/css/DefaultTable.css
  .default-table-wrapper {
    overflow-x: auto;
    background: white;
    border-radius: 8px;
    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
  }

  .default-table-title {
    font-size: 20px;
    font-weight: 700;
  }
  
  .default-table {
    width: 100%;             
    table-layout: auto;      
    border-collapse: collapse;
  }
  
  .default-table thead {
    background-color: #f5f5f5;
    text-align: left;
  }
  
  .default-table th,
  .default-table td {
    width: 120px;
    height: 30px;     
    padding: 8px 50px;
    border-bottom: 1px solid #e0e0e0;
  }
  
  .default-table-name {
    font-weight: 500;
  }

  .default-table .clickable-row {
    cursor: pointer;
  }
  
  .default-table .clickable-row:hover {
    background-color: #f0f8ff; 
  }

